--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/mdx": "^2.3.1",
+    "@astrojs/vercel": "^7.5.4",
+    "@vercel/analytics": "^1.2.2",
     "astro": "^4.5.17",
     "typescript": "^5.4.4"
   }
