--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^2.3.1",
     "@astrojs/vercel": "^7.5.4",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.5.17",
     "typescript": "^5.4.4"
   }
