--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.10",
-    "@astrojs/mdx": "^2.3.1",
-    "@astrojs/vercel": "^7.5.4",
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/speed-insights": "^1.0.10",
-    "astro": "^4.5.17",
-    "typescript": "^5.4.4"
+		"@astrojs/check": "0.9.6",
+		"@astrojs/mdx": "4.3.12",
+		"@astrojs/vercel": "9.0.2",
+		"@vercel/analytics": "1.6.1",
+		"@vercel/speed-insights": "1.3.0",
+		"astro": "5.16.4",
+    "typescript": "5.9.3"
   }
 }
